Bug 565977 - Remove usage of deprecated new Long in org.eclipse.jdt.debug.ui
Change-Id: Ia8a7a06aea3b73ed8dd9dcfd2421e5103f677a06
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>